--- a/Enemy variety/index.html
+++ b/Enemy variety/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <canvas id="canvas1"></canvas>
-    <img id="worn" src="img/enemy_worm.png">
+    <img id="worm" src="img/enemy_worm.png">
     <img id="ghost" src="img/enemy_ghost.png">
     <img id="spider" src="img/enemy_spider.png">
     <script src="script.js"></script>
