--- a/project7-scroller/index.html
+++ b/project7-scroller/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <canvas id="canvas1"></canvas>
-    <!-- <img id="playerImage" src="img/player.png">
+    <img id="playerImage" src="img/player.png">
     <img id="backgroundImage" src="img/background_single.png">
-    <img id="enemyImage" src="enemy_1.png"> -->
+    <img id="enemyImage" src="img/enemy_1.png">
 
     <script src="script.js"></script>
 </body>
