--- a/project 9-/index.html
+++ b/project 9-/index.html
@@ -20,6 +20,7 @@
     <img id="enemy_plant" src="img/enemy_plant.png">
     <img id="enemy_spider_big" src="img/enemy_spider_big.png">
     <img id="fire" src="img/fire.png">
+    <img id="collisionAnimatio" src="img/boom.png">
 
     <script type="module" src="main.js"></script>
 </body>
