--- a/project 9-/index.html
+++ b/project 9-/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>State Management</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,6 +22,7 @@
     <img id="enemy_spider_big" src="img/enemy_spider_big.png">
     <img id="fire" src="img/fire.png">
     <img id="collisionAnimatio" src="img/boom.png">
+    <img id="lives" src="img/lives.png">
 
     <script type="module" src="main.js"></script>
 </body>
